kubernetes/5-gke-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: monapp-ingress
spec:
  defaultBackend:
    service:
      name: web
      port:
        number: 80
